force-app/main/default/objects/Subscription__c/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <label>Cancellation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>