force-app/main/default/objects/Subscription__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description
  >Date when the subscription was cancelled. Auto-populated when status changes to Cancelled.</description>
    <inlineHelpText
  >This field is automatically populated when the subscription status is set to Cancelled.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>