force-app/main/default/objects/Subscription__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason for subscription cancellation. Required when status is set to Cancelled.</description>
    <inlineHelpText>This field becomes required when the subscription status is changed to Cancelled. Select the primary reason for cancellation.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Too High</fullName>
            </value>
            <value>
                <fullName>Missing Features</fullName>
            </value>
            <value>
                <fullName>Switched to Competitor</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Contract Ended</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <!-- Field Dependency: Required when Status = Cancelled -->
</CustomField>