force-app/main/default/objects/Subscription__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>