force-app/main/default/objects/Subscription__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External system identifier for integration purposes</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>