force-app/main/default/objects/Subscription__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &apos;Active&apos;),
    CASE(
        TEXT(Price_Plan__r.Billing_Frequency__c),
        &apos;Monthly&apos;, Price_Plan__r.Unit_Price__c * Quantity__c,
        &apos;Quarterly&apos;, (Price_Plan__r.Unit_Price__c * Quantity__c) / 3,
        &apos;Semi-Annual&apos;, (Price_Plan__r.Unit_Price__c * Quantity__c) / 6,
        &apos;Annual&apos;, (Price_Plan__r.Unit_Price__c * Quantity__c) / 12,
        0
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>