force-app/main/default/objects/Subscription__c/fields/Price_Plan__c.field-meta.xml
<CustomField>
    <fullName>Price_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Price Plan</label>
    <referenceTo>Price_Plan__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>