force-app/main/default/objects/Subscription__c/fields/Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Code__c</fullName>
    <displayFormat>SUB-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Subscription Code</label>
    <type>AutoNumber</type>
</CustomField>