force-app/main/default/objects/Subscription__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>