force-app/main/default/objects/Subscription__c/recordTypes/B2B_Subscription.recordType-meta.xml
<RecordType>
    <fullName>B2B_Subscription</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Business-to-Business subscriptions with contract management focus</description>
    <label>B2B Subscription</label>
</RecordType>