force-app/main/default/objects/Subscription__c/recordTypes/B2C_Subscription.recordType-meta.xml
<RecordType>
    <fullName>B2C_Subscription</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Business-to-Consumer subscriptions with self-service focus</description>
    <label>B2C Subscription</label>
</RecordType>