force-app/main/default/objects/Subscription__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>Account is required for all subscriptions</description>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is required for subscriptions. Please select an account before saving.</errorMessage>
</ValidationRule>