force-app/main/default/objects/Subscription__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <description
  >Cancellation reason is required when subscription status is Cancelled</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Cancelled"),
    ISBLANK(TEXT(Cancellation_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage
  >Cancellation reason is required when status is Cancelled. Please select a reason from the dropdown.</errorMessage>
</ValidationRule>