force-app/main/default/objects/Subscription__c/validationRules/Ordering_of_End_Date_and_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordering_of_End_Date_and_Start_Date</fullName>
    <active>true</active>
    <description>Sets the order of End Date after Star Date</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(End_Date__c)),
  End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorMessage>End Date must be after Start Date</errorMessage>
</ValidationRule>