force-app/main/default/objects/Subscription__c/validationRules/Positive_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero</errorMessage>
</ValidationRule>