force-app/main/default/objects/Subscription__c/validationRules/Status_Transition_Terminal.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Transition_Terminal</fullName>
    <active>true</active>
    <description>Prevent changes from terminal status (Cancelled)</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    AND(TEXT(PRIORVALUE(Status__c)) = "Cancelled", TEXT(Status__c) != "Cancelled")
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage
  >Cannot change status from Cancelled. This is a terminal status.</errorMessage>
</ValidationRule>