force-app/main/default/objects/Subscription__c/validationRules/Trial_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Trial_Date_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Trial_End_Date__c)),
  Trial_End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorMessage>Trial End Date must be after Start Date</errorMessage>
</ValidationRule>